<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="5dp"
    android:textAlignment="center"
    android:textDirection="firstStrongRtl"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="120dp"

        android:contentDescription="@string/LOGO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_3138652" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="326dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="108dp"
        android:text="@string/company_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"

        android:background="#000000"
        android:foregroundTint="#FB0000"
        android:theme="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="538dp"
        android:layout_height="916dp"
        android:alpha="0.3"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        app:srcCompat="@drawable/images_" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="362dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/ISo"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approve"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#B30707"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="260dp"
        android:layout_height="28dp"
        android:text="@string/approbe"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="391dp"
        android:layout_height="110dp"
        android:layout_marginTop="28dp"
        android:text="@string/main"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="126dp"
        android:layout_height="134dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/circle_cropped" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/sensei"
        android:textColor="#FF0000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="127dp"
        android:layout_height="29dp"
        android:layout_marginStart="4dp"
        android:text="@string/name"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/USKA"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/KAI"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/job"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/footer"
        android:textColor="#2196F3"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="364dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:text="@string/address"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/phone"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

</androidx.constraintlayout.widget.ConstraintLayout>